[package]
name = "submit-block-demo"
version = "0.1.0"
authors = ["ian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = { git = "https://github.com/nervosnetwork/ckb", rev = "v0.25.0-rc1" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", rev = "v0.25.0-rc1" }
serde = "1.0"
serde_json = "1.0"
faster-hex = "0.4"
